# bloqs

./: .gitignore  README.md  pyproject.toml
src/bloqs/common/: QuantumGate.py
src/bloqs/ext/cirq/: __init__.py  gates.py  utils.py
src/bloqs/ext/pyquil/: __init__.py  gates.py  utils.py
tests/: test_bloqs.py  test_by_wavefunction.py
