[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bloqs"
version = "0.0.2"
authors = [
  { name="Arfat Salman", email="giney.paradise@gmail.com" },
]
description = "A small utility library for Qiskit quantum gates in Cirq and pyQuil"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  'cirq',
  'pyquil'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"